Revision history for Perl extension At.pm

{{$NEXT}}

0.17 2024-02-13T19:46:37Z

    - Work in progress: Refactor methods with more than one optional parameter to accept a hash
    - Update according to lexicon changes in bluesky-social/atproto@9579bec
        - temp_fetchLabels(...) has been deprecated; use label_queryLabels(...) or label_subscribeLabels(...) instead
    - Update according to lexicon changes in bluesky-social/atproto@b400fae
        - sanity check on DID in server_reserveSigningKey(...) endpoint.

0.16 2024-02-11T00:04:55Z

    - Work in progress: Refactor methods with more than one optional parameter to accept a hash
    - Bluesky no longer requires an invite to create an account
    - Update according to lexicon changes in bluesky-social/atproto@e4ec7af
       - add date range and comment filter to queryModerationEvents endpoint

0.15 2024-01-27T23:37:51Z

    - Minor bug sweep as I work on a functioning client

0.14 2024-01-27T21:45:25Z

    - Minor bug sweep as I work on a functioning client

0.13 2024-01-26T19:00:20Z

    - Less broken session management

0.12 2024-01-26T03:45:00Z

    - Update according to lexicon changes in bluesky-social/atproto@4171c04
       - add interest tags to preferences
    - Update according to lexicon changes in bluesky-social/atproto@8994d36
       - signup queueing

0.11 2024-01-25T20:06:55Z

    - Minor bug sweep as I work on a functioning client
    - Early version of sugary API

0.10 2024-01-25T05:01:45Z

    - Minor bug sweep as I work on a functioning client

0.09 2024-01-24T21:30:18Z

    - Update according to lexicon changes in bluesky-social/atproto@dac5c9e
       - tagged suggestions
    - Update according to lexicon changes in bluesky-social/atproto@fb979b1
       - social graph relationships endpoint

0.08 2024-01-23T01:48:21Z

    - Resume expired sessions with $at->server_refreshSession( ... )

0.07 2024-01-20T22:54:55Z

    - Login failures are fatal errors