@@ -2,6 +2,9 @@ Revision history for Perl extension At.pm
 
 {{$NEXT}}
 
+    - Update according to lexicon changes in bluesky-social/atproto@8c94979f73
+        - add timeline index pref to bsky::actor::savedFeedsPref
+
 0.17 2024-02-13T19:46:37Z
 
     - Work in progress: Refactor methods with more than one optional parameter to accept a hash
